[package]
name = "cargo-zproxy"
version = "0.1.0"
edition = "2021"
authors = ["Chping <chping@iowk.com>"]
license = "Apache-2.0"
description = "Switch warehouse image"
keywords = ["cargo", "proxy", "zh","subcommand"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"
repository = "https://github.com/cxping/cargo-zproxy"
readme = "README.md"

[[bin]]
name = "cargo-zproxy"


[build-dependencies]
embed-resource = "1.7.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
git2 = "0.15"
dirs = "4.0"
json = "0.12"
toml = "0.5"